--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -48,11 +48,11 @@ concat_dim: 1. # change to 0 for concat along token dim, 1 for feature dim #TODO
 normalize_action: True
 
 # action encoder
-action_emb_dim: 10 # change to 384 for latent action model
+action_emb_dim: 384 
 num_action_repeat: 1
 
 # proprio encoder
-proprio_emb_dim: 10 # change to 384 for latent action model
+proprio_emb_dim: 384
 num_proprio_repeat: 1
 
 num_hist: 3
