--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -6,6 +6,8 @@ defaults:
   - proprio_encoder: proprio
   - decoder: vqvae
   - predictor: vit
+  - latent_action_model: default
+  - latent_vq_model: default
   - override hydra/launcher: submitit_slurm
 
 # base path to save model outputs. Checkpoints will be saved to ${ckpt_base_path}/outputs.
@@ -40,6 +42,7 @@ training:
   decoder_lr: 3e-4
   predictor_lr: 5e-4
   action_encoder_lr: 5e-4
+  latent_lr: 5e-4
 
 img_size: 224 # should be a multiple of 224
 frameskip: 5
@@ -68,6 +71,9 @@ model:
   train_encoder: False
   train_predictor: True
   train_decoder: True
+  latent_action_dim: 32
+  commitment: 0.25
+  ema_decay: 0.99
 
 debug: False 
 
