--- a/environment.yaml
+++ b/environment.yaml
@@ -270,6 +270,7 @@ dependencies:
       - triton==2.3.0
       - typeguard==2.13.3
       - typing-extensions==4.12.1
+      - umap-learn==0.5.6
       - urllib3==2.2.1
       - virtualenv==20.26.2
       - wandb==0.13.1
