--- a/conf/env/pusht.yaml
+++ b/conf/env/pusht.yaml
@@ -9,11 +9,11 @@ dataset:
   with_velocity: true
   n_rollout: null
   normalize_action: ${normalize_action}
-  data_path: ${oc.env:DATASET_DIR}/pusht_noise
+  data_path: ${oc.env:DATASET_DIR}/pusht_noise_discretized_1k
   split_ratio: 0.9
   transform:
     _target_: "datasets.img_transforms.default_transform"
     img_size: ${img_size}
 
 decoder_path: null
-num_workers: 16
+num_workers: 10
