--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - env: point_maze
+  - env: pusht
   - encoder: dino 
   - action_encoder: proprio
   - proprio_encoder: proprio
@@ -33,7 +33,7 @@ hydra:
 
 training:
   seed: 0
-  epochs: 100
+  epochs: 1
   batch_size: 32 # should >= nodes * tasks_per_node
   save_every_x_epoch: 1
   reconstruct_every_x_batch: 500
@@ -46,7 +46,7 @@ training:
 
 img_size: 224 # should be a multiple of 224
 frameskip: 5
-concat_dim: 1. # change to 0 for concat along token dim, 1 for feature dim #TODO
+concat_dim: 0 # change to 0 for concat along token dim, 1 for feature dim #TODO
 
 normalize_action: True
 
@@ -61,7 +61,7 @@ num_proprio_repeat: 1
 num_hist: 3
 num_pred: 1 # only supports 1
 has_predictor: True # set this to False for only training a decoder
-has_decoder: True # set this to False for only training a predictor
+has_decoder: False # set this to False for only training a predictor
 
 model:
   _target_: models.visual_world_model.VWorldModel
@@ -70,7 +70,7 @@ model:
   num_pred: ${num_pred}
   train_encoder: False
   train_predictor: True
-  train_decoder: True
+  train_decoder: False
   latent_action_dim: 32
   commitment: 0.25
   ema_decay: 0.99
