--- a/conf/env/pusht.yaml
+++ b/conf/env/pusht.yaml
@@ -1,15 +1,15 @@
 name: pusht
 args: []
 kwargs: 
-  with_velocity: true
+  with_velocity: false
   with_target: true
 
 dataset:
   _target_: "datasets.pusht_dset.load_pusht_slice_train_val"
-  with_velocity: true
+  with_velocity: false
   n_rollout: null
   normalize_action: ${normalize_action}
-  data_path: ${oc.env:DATASET_DIR}/pusht_noise_discretized_1k
+  data_path: ${oc.env:DATASET_DIR}
   split_ratio: 0.9
   transform:
     _target_: "datasets.img_transforms.default_transform"
