--- a/conf/latent_vq_model/default.yaml
+++ b/conf/latent_vq_model/default.yaml
@@ -1,5 +1,6 @@
 _target_: models.vq_ema.VectorQuantizerEMA
 num_codes: 9
-code_dim: ${model.latent_action_dim}
+code_dim: ${model.codebook_dim}
+codebook_splits: ${model.codebook_splits}
 ema_decay: ${model.ema_decay}
 commitment: ${model.commitment}
