--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -35,6 +35,8 @@ training:
   batch_size: 14 # should >= nodes * tasks_per_node
   save_every_x_epoch: 1
   reconstruct_every_x_batch: 500
+  log_train_error_every_x_steps: 0
+  val_every_x_steps: 0
   num_reconstruct_samples: 6
   encoder_lr: 1e-6
   decoder_lr: 3e-4
