--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -37,6 +37,7 @@ training:
   batch_size: 14 # should >= nodes * tasks_per_node
   save_every_x_epoch: 1
   val_every_x_steps: 8000 # set >0 to run validation every N training steps
+  log_every_x_steps: 500 # write training stats to training.log every N training steps
   reconstruct_every_x_batch: 500
   num_reconstruct_samples: 6
   encoder_lr: 1e-6
