--- a/conf/env/pusht.yaml
+++ b/conf/env/pusht.yaml
@@ -8,16 +8,16 @@ dataset:
   _target_: "datasets.pusht_dset.load_pusht_slice_train_val"
   with_velocity: false
   n_rollout: null
-  normalize_action: ${normalize_action}
+  normalize_action: ${dataset.normalize_action}
   relative: true
-  action_scale: 100.0
+  action_scale: ${dataset.action_scale}
   data_path: ${oc.env:DATASET_DIR}
   split_ratio: 0.9
   process_actions: "concat"
   transform:
     _target_: "datasets.img_transforms.default_transform"
-    img_size: ${img_size}
+    img_size: ${dataset.img_size}
 
 decoder_path: null
-num_workers: 18
+num_workers: ${training.num_workers}
 
