--- a/conf/planner/mpc_discrete_cem.yaml
+++ b/conf/planner/mpc_discrete_cem.yaml
@@ -2,7 +2,7 @@ _target_: planning.mpc.MPCPlanner
 max_iter: 10
 n_taken_actions: 1
 sub_planner:
-  target: planning.cem.DiscreteCEMPlanner
+  target: planning.discrete_cem.DiscreteCEMPlanner
   horizon: 5
   topk: 30
   num_samples: 300
