--- a/conf/plan_pusht.yaml
+++ b/conf/plan_pusht.yaml
@@ -35,6 +35,7 @@ plan_action_type: "discrete"  # "raw" or "latent" or "discrete" | raw = baseline
 use_action_encoder: false   # True for baseline
 use_lam: true   # false for raw, true for discrete and latent
 use_vq: true   #  false for raw, true for discrete
+is_training: false # always false 
 
 debug_dset_init: False
 
