--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -10,12 +10,12 @@ defaults:
   - override hydra/launcher: submitit_slurm
 
 # base path to save model outputs. Checkpoints will be saved to ${ckpt_base_path}/outputs.
-ckpt_base_path: ./ # put absolute path here
+ckpt_base_path: /content/drive/MyDrive/DINO-WM # put absolute path here
 debug: False 
 
 hydra:
   run:
-    dir: ${ckpt_base_path}
+    dir: ${ckpt_base_path}/outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
   sweep:
     dir: ${ckpt_base_path}/outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
     subdir: ${hydra.job.num}
