--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -10,7 +10,7 @@ defaults:
   - override hydra/launcher: submitit_slurm
 
 # base path to save model outputs. Checkpoints will be saved to ${ckpt_base_path}/outputs.
-ckpt_base_path: /content/drive/MyDrive/DINO-WM # put absolute path here
+ckpt_base_path: /content # put absolute path here
 debug: False 
 
 hydra:
