--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -57,7 +57,7 @@ model:
   _target_: models.visual_world_model.VWorldModel
   use_action_encoder: false
   use_lam: true
-  use_vq: false
+  use_vq: true
   has_predictor: True 
   has_decoder: False 
   plan_action_type: raw  # always use raw for training
@@ -83,7 +83,7 @@ model:
   ema_decay: 0.95
 
 two_phase:
-  enabled: false
+  enabled: true
   warmup_steps: 2000
   mix_steps: 1000
 
