--- a/conf/plan_pusht.yaml
+++ b/conf/plan_pusht.yaml
@@ -22,7 +22,7 @@ hydra:
             "export MASTER_PORT=$(for port in $(shuf -i 30000-65500 -n 20); do if [[ $(netstat -tupln 2>&1 | grep $port | wc -l) -eq 0 ]] ; then echo $port; break; fi; done;)",]
 
 # model to load for planning
-ckpt_base_path: /content/drive/MyDrive/DINO-WM/Model Checkpoints/Tests/14-57-38  # put absolute path here. Checkpoints will be loaded from ${ckpt_base_path}/outputs
+ckpt_base_path: /content/drive/MyDrive/DINO-WM/LatentActionVQModel/LatentActionVQModel/outputs/2026-01-29/08-55-20  # put absolute path here. Checkpoints will be loaded from ${ckpt_base_path}/outputs
 model_name: null
 model_epoch: latest
 
@@ -54,12 +54,14 @@ planner:
   num_samples: 300
   var_scale: 1
   opt_steps: 10
-  eval_every: 3
-  pseudocount: 0.0
-  momentum: 0.1
-  min_prob: 0.0001
-  init_smoothing: 0.0
+  eval_every: 1
+  pseudocount: 1.0
+  momentum: 0.7
+  min_prob: 0.001
+  init_smoothing: 0.05
   sample_temperature: 1.0
   use_mode_as_first_sample: false
+  return_mode: false
   name: discrete_cem
+
 
