--- a/conf/plan_pusht.yaml
+++ b/conf/plan_pusht.yaml
@@ -48,20 +48,24 @@ objective:
   mode: last
 
 planner:
-  _target_: planning.cem.CEMPlanner
-  horizon: 5
-  topk: 30
-  num_samples: 300
-  var_scale: 1
-  opt_steps: 10
-  eval_every: 1
-  pseudocount: 1.0
-  momentum: 0.7
-  min_prob: 0.001
-  init_smoothing: 0.05
-  sample_temperature: 1.5
-  use_mode_as_first_sample: false
-  return_mode: false
-  name: cem
+  _target_: planning.mpc.MPCPlanner
+  max_iter: 5 
+  n_taken_actions: 5
+  sub_planner:
+    target: planning.cem.CEMPlanner
+    horizon: 5
+    topk: 30
+    num_samples: 300
+    var_scale: 1
+    opt_steps: 10
+    eval_every: 1
+    pseudocount: 1.0
+    momentum: 0.7
+    min_prob: 0.001
+    init_smoothing: 0.05
+    sample_temperature: 1.5
+    use_mode_as_first_sample: false
+    return_mode: false
+  name: mpc_cem
 
 
