--- a/conf/plan_point_maze.yaml
+++ b/conf/plan_point_maze.yaml
@@ -34,6 +34,13 @@ n_plot_samples: 10
 
 debug_dset_init: False
 
+latent_prior:
+  mu: null
+  sigma: null
+  k: 2.0
+  lambda: 0.01
+  use_prior_sampling: true
+
 objective:
   _target_: planning.objectives.create_objective_fn
   alpha: 0
@@ -52,4 +59,9 @@ planner:
     var_scale: 1
     opt_steps: 10
     eval_every: 1
+    latent_prior_mu: ${latent_prior.mu}
+    latent_prior_sigma: ${latent_prior.sigma}
+    latent_prior_k: ${latent_prior.k}
+    latent_prior_lambda: ${latent_prior.lambda}
+    use_prior_sampling: ${latent_prior.use_prior_sampling}
   name: mpc_cem
