--- a/conf/plan_pusht.yaml
+++ b/conf/plan_pusht.yaml
@@ -41,6 +41,13 @@ use_z: true
 use_delta: false
 debug_dset_init: False
 
+latent_prior:
+  mu: null
+  sigma: null
+  k: 2.0
+  lambda: 0.01
+  use_prior_sampling: true
+
 objective:
   _target_: planning.objectives.create_objective_fn
   alpha: 1
@@ -59,6 +66,11 @@ planner:
     var_scale: 1
     opt_steps: 10
     eval_every: 1
+    latent_prior_mu: ${latent_prior.mu}
+    latent_prior_sigma: ${latent_prior.sigma}
+    latent_prior_k: ${latent_prior.k}
+    latent_prior_lambda: ${latent_prior.lambda}
+    use_prior_sampling: ${latent_prior.use_prior_sampling}
     pseudocount: 1.0
     momentum: 0.7
     min_prob: 0.001
@@ -67,5 +79,4 @@ planner:
     use_mode_as_first_sample: false
     return_mode: false
   name: mpc_cem
-
 
