--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -56,8 +56,8 @@ dataset:
 model:
   _target_: models.visual_world_model.VWorldModel
   use_action_encoder: false
-  use_lam: true
-  use_vq: true
+  use_lam: false
+  use_vq: false
   has_predictor: True 
   has_decoder: False 
   plan_action_type: raw  # always use raw for training
@@ -68,7 +68,7 @@ model:
   train_predictor: true
   train_decoder: false
   train_action_encoder: false   # explicit, even though use_action_encoder=false
-  train_lam: true               # must be true only if use_lam=true
+  train_lam: false               # must be true only if use_lam=true
 
   action_emb_dim: 32 
   num_action_repeat: 1
@@ -79,12 +79,12 @@ model:
   codebook_splits: 1
   codebook_dim: 32              # latent_action_dim must be = codebook_splits * codebook_dim 
   latent_action_dim: 32
-  num_codes: 16
-  commitment: 0.1
-  ema_decay: 0.95
+  num_codes: 32
+  commitment: 0.05
+  ema_decay: 0.99
 
 two_phase:
-  enabled: true
+  enabled: false
   warmup_steps: 2000
   mix_steps: 1000
 
